# AgnesStudio

./: .gitignore  Cargo.toml  README.md  agnes-image-2.0-flash文档.md  agnes-image-2.1-flash文档.md  agnes-video-v2.0文档.md  build.ps1  build.rs  setup.iss
examples/: make_ico.rs
src/: api.rs  app.rs  config.rs  main.rs  updater.rs
